# martenweave-core

./: .env.example  .gitignore  AGENTS.md  AGENT_1_PRODUCT_MARKET.md  AGENT_2_SAP_BUYER.md  AGENT_3_COMPETITIVE.md  AGENT_4_GTM_PRICING.md  AGENT_5_TECHNICAL_AUDIT.md  AGENT_5_WEBSITE_AUDIT.md  AGENT_6_RED_TEAM.md  CHANGELOG.md  CITATION.cff  COMMERCIAL_DUE_DILIGENCE_AGENT_NOTES.md  COMMERCIAL_DUE_DILIGENCE_MARTENWEAVE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  SUPPORT.md  factory  modelops.config.example.yaml  plan.md  pyproject.toml
.github/: pull_request_template.md
.playwright-mcp/: page-2026-06-09T18-31-57-660Z.yml  page-2026-06-09T18-32-05-271Z.yml  page-2026-06-09T18-37-08-596Z.yml  page-2026-06-29T17-03-26-909Z.yml  page-2026-06-29T17-03-46-336Z.yml  page-2026-06-29T17-03-59-755Z.yml  page-2026-06-29T17-04-09-056Z.yml  page-2026-06-29T17-04-17-390Z.yml  page-2026-06-29T17-04-25-917Z.yml  page-2026-06-29T17-04-34-307Z.yml  page-2026-06-29T17-06-39-569Z.yml  page-2026-06-29T17-23-19-471Z.yml  page-2026-06-29T17-23-33-864Z.yml  page-2026-06-29T17-48-09-637Z.yml  page-2026-06-29T17-48-30-544Z.yml  page-2026-06-29T17-48-39-191Z.yml  page-2026-06-29T18-01-02-844Z.yml  page-2026-06-29T18-01-26-383Z.yml  page-2026-06-29T18-01-38-741Z.yml  page-2026-06-30T09-26-56-051Z.yml  page-2026-06-30T09-27-49-653Z.yml  page-2026-06-30T09-28-12-639Z.yml  page-2026-06-30T09-28-45-631Z.yml  page-2026-06-30T09-30-00-311Z.yml  page-2026-06-30T09-30-10-267Z.yml  page-2026-06-30T09-30-34-794Z.yml  page-2026-06-30T09-30-45-949Z.yml  page-2026-06-30T09-31-18-585Z.yml  page-2026-06-30T09-32-57-016Z.yml  page-2026-06-30T09-33-52-497Z.yml  page-2026-06-30T09-34-26-965Z.yml  page-2026-06-30T09-34-43-546Z.yml  page-2026-06-30T09-34-52-598Z.yml  page-2026-06-30T09-40-29-269Z.yml  page-2026-06-30T09-40-45-701Z.yml  page-2026-06-30T09-41-40-877Z.yml  page-2026-06-30T09-41-50-077Z.yml  page-2026-06-30T09-43-31-276Z.yml  page-2026-06-30T09-43-48-372Z.yml  page-2026-06-30T09-44-05-387Z.yml  (+47 more)
docs/: README.md  agent-modeling-guide.md  ai-provider-architecture.md  ai-usage-telemetry.md  bulk-refactor-operations.md  canonical-model.md  canonical-status-lifecycle.md  change-workflow.md  chat-to-model-contract.md  commercial-packaging.md  commercial-positioning.md  conflict-detection.md  dama-correlation.md  database-metadata-import.md  dbt-analytics-import.md  demo-quickstart-flow.md  domain-packs.md  first-15-minutes.md  github-publishing-workflow.md  google-adk-integration.md  google-drive-sheets-integration.md  graph-projection-export-contract.md  graph-visualization-layer.md  integration-architecture.md  json-schema-openapi-import.md  known-limitations.md  licensing-and-commercial-use.md  local-static-viewer.md  martenweave-data-model-book.md  mcp-server-design.md  model-metadata-taxonomy.md  model-package-format.md  model-side-gaps.md  modeling-methodology.md  neo4j-graph-projection.md  open-source-readiness.md  openlineage-export.md  pilot-package.md  product-discovery-interviews.md  relationship-taxonomy.md  (+16 more)
frontend/: .npmrc  (+11 more)
(+1663 files in other folders)
