[project]
name = "martenweave-core"
version = "0.1.0"
description = "Backend-first agentic data model registry core."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0",
  "openpyxl>=3.1",
  "fastapi>=0.100",
  "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
google_adk = [
  "google-adk>=0.1.0",
  "google-generativeai>=0.8.0",
]

[project.scripts]
modelops = "modelops_core.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
