[project]
name = "martenweave-core"
version = "0.4.0"
description = "Backend-first agentic data model registry core."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
  "data-governance",
  "data-quality",
  "data-modeling",
  "mdm",
  "sap-migration",
  "model-registry",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0",
  "openpyxl>=3.1",
  "fastapi>=0.100",
  "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "build>=1.0",
  "httpx>=0.24",
]
google_adk = [
  "google-adk>=0.1.0",
  "google-generativeai>=0.8.0",
]
mcp = [
  "mcp>=1.0",
]

[project.scripts]
modelops = "modelops_core.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.coverage.run]
source = ["src/modelops_core"]
omit = [
  "*/__pycache__/*",
  "*/.venv/*",
  "*/tests/*",
  "*/generated/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
